<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appname">Group Study App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Not Registered? Signup</string>
    <string name="loginbutton">Login</string>
    <string name="signupbutton">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Register">New User Registration</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">E-mail</string>
    <string name="mobNo">Mobile No.</string>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="title_activity_login_validate">LoginValidateActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">My Groups</string>
    <string name="title_section2">New Group</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Logout</string>
    <string name="title_section5">Find New Connection</string>
    <string name="title_section6">My Connections</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_my_groups">MyGroupsActivity</string>
    <string name="title_activity_group_message">GroupMessage</string>
    <string name="title_activity_create_new_group">CreateNewGroup</string>
    <string name="title_activity_logout">Logout</string>
    <string name="newMessage"></string>
    <string name="creategroup">Create New Group</string>
    <string name="newgroupname">Group Name</string>
    <string name="addmembers">Select Group Members</string>
    <string name="creategroupbutton">Create Group</string>
    <string name="title_activity_new_connection">NewConnection</string>
    <string name="title_activity_select_group_members">SelectGroupMembers</string>
    <string name="title_activity_add_new_group_member">AddNewGroupMember</string>
    <string name="title_activity_view_group_members">Group Members</string>
    <string name="title_activity_view_connections">ViewConnections</string>

</resources>
