<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.groupstudyapp.MainActivity" >
    	<item
        android:id="@+id/title_section6"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_section6"/>
    	<item
        android:id="@+id/title_section5"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_section5"/>
		<item
        android:id="@+id/title_section2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_section2"/>
		<item
        android:id="@+id/title_section3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_section3"/>
        <item
        android:id="@+id/title_section4"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_section4"/>

</menu>
