<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.groupstudyapp.RegistrationActivity" >

   <TextView android:id="@+id/Register"
  		android:textSize="32sp"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:capitalize="characters"
        android:text="@string/Register" />
        
   <EditText android:id="@+id/Firstname"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register"
        android:hint="@string/firstname" />
        
   <EditText android:id="@+id/Lastname"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Firstname"
        android:hint="@string/lastname" />
        
   <EditText android:id="@+id/Email"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lastname"
        android:hint="@string/email" />
        
    <EditText android:id="@+id/Mobileno"
    	android:inputType="number"
    	android:layout_width="500dp"
    	android:layout_height="wrap_content" 
        android:layout_below="@id/Email"
        android:hint="@string/mobNo" />
     
    <EditText android:id="@+id/Password"
    	android:inputType="textPassword"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Mobileno"
        android:hint="@string/password" />
        
    <Button
    	android:id="@+id/Registeruser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:text="@string/signupbutton"
        android:onClick="registernewuser" />

</RelativeLayout>
