<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView android:id="@+id/creategrouptitle"
  		android:textSize="32sp"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:capitalize="characters"
        android:text="@string/creategroup" />
        

    <EditText android:id="@+id/groupname"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/creategrouptitle"
        android:hint="@string/newgroupname" />
     
    <Button
    	android:id="@+id/creategroupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupname"
        android:text="@string/creategroupbutton"/>

</RelativeLayout>
